[gd_scene load_steps=13 format=3 uid="uid://cm63ersj8xng1"]

[ext_resource type="Script" path="res://scripts/Enemyship.gd" id="1_sjtvf"]
[ext_resource type="Texture2D" uid="uid://cmesd03jtp0ma" path="res://sprites/enemyship.png" id="2_8oga8"]
[ext_resource type="Script" path="res://scripts/SpaceMovement.gd" id="3_0wub3"]
[ext_resource type="Script" path="res://scripts/TargetSelector.gd" id="4_qxbn7"]
[ext_resource type="Script" path="res://scripts/Shooting.gd" id="5_rhx0q"]
[ext_resource type="PackedScene" uid="uid://c8qjc451cccjh" path="res://projectiles/laserbolt-enemy.tscn" id="6_lhety"]
[ext_resource type="Script" path="res://scripts/Health.gd" id="7_odcht"]
[ext_resource type="Script" path="res://scripts/DestroyIfGetsOffscreen.gd" id="8_l85ak"]
[ext_resource type="PackedScene" uid="uid://bld3j7dxw74ck" path="res://enemies/enemyship-explosion.tscn" id="8_xpw1n"]
[ext_resource type="Script" path="res://scripts/SoundPlayer.gd" id="10_hk18j"]
[ext_resource type="AudioStream" uid="uid://dyp3ssbbgdqhx" path="res://sound/hitHurt.wav" id="11_mti36"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u772t"]
radius = 10.8696

[node name="EnemyShip" type="CharacterBody2D"]
position = Vector2(-59, -59)
collision_layer = 9
collision_mask = 9
script = ExtResource("1_sjtvf")
stopping_distance = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.62939e-06, -1.52588e-05)
scale = Vector2(0.92, 0.92)
shape = SubResource("CircleShape2D_u772t")

[node name="Enemyship" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_8oga8")

[node name="SpaceMovement" type="Node" parent="."]
script = ExtResource("3_0wub3")
accel_speed = 80.0

[node name="TargetSelector" type="Node" parent="."]
script = ExtResource("4_qxbn7")

[node name="Shooting" type="Node" parent="." node_paths=PackedStringArray("parentBody", "target_selector")]
script = ExtResource("5_rhx0q")
projectile_scene = ExtResource("6_lhety")
parentBody = NodePath("..")
target_selector = NodePath("../TargetSelector")

[node name="Health" type="Node" parent="."]
script = ExtResource("7_odcht")
max_health = 20.0
explosion_scene = ExtResource("8_xpw1n")

[node name="DestroyIfGetsOffscreen" type="VisibleOnScreenNotifier2D" parent="."]
script = ExtResource("8_l85ak")

[node name="SoundPlayer" type="Node" parent="."]
script = ExtResource("10_hk18j")
sounds = Array[AudioStream]([ExtResource("11_mti36")])
randomize_pitch = true
min_pitch_offset = -0.25
max_pitch_offset = 0.25
